# Comfyui-TextEditor-Penguin

./: README.md  __init__.py  project.py  pyproject.toml
.github/workflows/: publish.yml
